{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 89,
  "lineage": "ffc3d6cf-2edc-94a8-9a13-812216374a48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "center2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061efd8a9003da5f3",
            "association_id": "eipassoc-016a5718ad1e571aa",
            "domain": "vpc",
            "id": "eipalloc-061efd8a9003da5f3",
            "instance": "i-01fdf0427e3ffe3f1",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0199485c8a8b9971d",
            "private_dns": "ip-10-0-1-208.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-37-237-75.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.237.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.center2_backup",
            "aws_key_pair.my_sshkey",
            "aws_security_group.basic",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "center2_backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b0badd34cf9696f",
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:instance/i-01fdf0427e3ffe3f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fdf0427e3ffe3f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0199485c8a8b9971d",
            "private_dns": "ip-10-0-1-208.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.208",
            "public_ip": "52.78.209.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00546f08bce2359a5",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004370cf350f6f232",
            "tags": {
              "NAME": "center2"
            },
            "tags_all": {
              "NAME": "center2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-003a4cc06dccc8e52"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_sshkey",
            "aws_security_group.basic",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:security-group/sg-003a4cc06dccc8e52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003a4cc06dccc8e52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "114.203.110.92/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "115.68.157.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "115.68.158.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-public",
            "name_prefix": "",
            "owner_id": "848028919227",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03423a3d8c38b9983"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:internet-gateway/igw-01fe19e4bfca0051b",
            "id": "igw-01fe19e4bfca0051b",
            "owner_id": "848028919227",
            "tags": {
              "Name": "muhayu-vpc"
            },
            "tags_all": {
              "Name": "muhayu-vpc"
            },
            "vpc_id": "vpc-03423a3d8c38b9983"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01fe19e4bfca0051b",
            "id": "r-rtb-0427d824f149ea2461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0427d824f149ea246",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:route-table/rtb-0c0ad2ed5861bc9bb",
            "id": "rtb-0c0ad2ed5861bc9bb",
            "owner_id": "848028919227",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "muhayu-vpc-private-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "muhayu-vpc-private-ap-northeast-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03423a3d8c38b9983"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:route-table/rtb-0427d824f149ea246",
            "id": "rtb-0427d824f149ea246",
            "owner_id": "848028919227",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "muhayu-vpc-public"
            },
            "tags_all": {
              "Name": "muhayu-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03423a3d8c38b9983"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053f6298233a73b39",
            "route_table_id": "rtb-0c0ad2ed5861bc9bb",
            "subnet_id": "subnet-092a90444800dfa27"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f62d3af3b58d552f",
            "route_table_id": "rtb-0427d824f149ea246",
            "subnet_id": "subnet-004370cf350f6f232"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:subnet/subnet-092a90444800dfa27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-092a90444800dfa27",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848028919227",
            "tags": {
              "Name": "muhayu-vpc-private-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "muhayu-vpc-private-ap-northeast-2a"
            },
            "vpc_id": "vpc-03423a3d8c38b9983"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:subnet/subnet-004370cf350f6f232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-004370cf350f6f232",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848028919227",
            "tags": {
              "Name": "muhayu-vpc-public-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "muhayu-vpc-public-ap-northeast-2a"
            },
            "vpc_id": "vpc-03423a3d8c38b9983"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:848028919227:vpc/vpc-03423a3d8c38b9983",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01683707956b44ff8",
            "default_route_table_id": "rtb-0f307b4f67a8b223a",
            "default_security_group_id": "sg-0235b964ef945426f",
            "dhcp_options_id": "dopt-1c6df777",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03423a3d8c38b9983",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f307b4f67a8b223a",
            "owner_id": "848028919227",
            "tags": {
              "Name": "muhayu-vpc"
            },
            "tags_all": {
              "Name": "muhayu-vpc"
            }
          }
        }
      ]
    }
  ]
}